WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211255
clearApplicationBundleIdentifierTestingOverride() should set the bundle identifier to a null string, not an empty string
https://bugs.webkit.org/show_bug.cgi?id=211255
Summary
clearApplicationBundleIdentifierTestingOverride() should set the bundle ident...
Kate Cheney
Reported
2020-04-30 14:21:26 PDT
After the bundle identifier is cleared in a testing override call, subsequent calls to applicationBundleIdentifier() should check the NSBundle mainBundle object. This only happens if the testing bundle identifier is null (currently it is set to the empty string between calls).
Attachments
Patch
(1.86 KB, patch)
2020-04-30 14:25 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.88 KB, patch)
2020-04-30 14:32 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2020-04-30 14:21:47 PDT
<
rdar://problem/62651110
>
Kate Cheney
Comment 2
2020-04-30 14:25:10 PDT
Created
attachment 398091
[details]
Patch
Kate Cheney
Comment 3
2020-04-30 14:26:40 PDT
An empty bundle identifier is causing flaky tests. I was able to reproduce before using: run-webkit-tests LayoutTests/http/tests/in-app-browser-privacy/ LayoutTests/userscripts/mixed-case-stylesheet.html LayoutTests/userscripts/simple-stylesheet.html LayoutTests/userscripts/user-style* -f --iphone-simulator --no-build --no-retry-failures --debug-rwt-logging --exit-after-n-failures 1 --force But not able to reproduce with this patch.
John Wilander
Comment 4
2020-04-30 14:27:48 PDT
Comment on
attachment 398091
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=398091&action=review
r=me. Please address the comment.
> Source/WebCore/platform/cocoa/RuntimeApplicationChecksCocoa.mm:72 > + applicationBundleIdentifierOverride() = String();
The bug title indicates that this should be nullptr. Either the title or this assignment should be changed.
Kate Cheney
Comment 5
2020-04-30 14:28:45 PDT
(In reply to John Wilander from
comment #4
)
> Comment on
attachment 398091
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=398091&action=review
> > r=me. Please address the comment. > > > Source/WebCore/platform/cocoa/RuntimeApplicationChecksCocoa.mm:72 > > + applicationBundleIdentifierOverride() = String(); > > The bug title indicates that this should be nullptr. Either the title or > this assignment should be changed.
You're right. It should be "null string" not just null.
Kate Cheney
Comment 6
2020-04-30 14:32:49 PDT
Created
attachment 398093
[details]
Patch for landing
EWS
Comment 7
2020-04-30 14:58:13 PDT
Committed
r260969
: <
https://trac.webkit.org/changeset/260969
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398093
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug