clearApplicationBundleIdentifierTestingOverride() should set the bundle identifier to a null string, not an empty string https://bugs.webkit.org/show_bug.cgi?id=211255 <rdar://problem/62651110>

Reviewed by John Wilander.

No new tests, behavior confirmed by existing tests.

Clearing the bundle identifier during tests should reset the override
value to be a null string so that the following calls to applicationBundleIdentifier()
use the [NSBundle mainBundle] bundleIdentifier] call.

* platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::clearApplicationBundleIdentifierTestingOverride):


Canonical link: https://commits.webkit.org/224152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260969 268f45cc-cd09-0410-ab3c-d52691b4dbfc